fixed cart shoe issue, now correctly displays full image without cutting off

--- a/src/components/routes/cart/cart.styles.scss
+++ b/src/components/routes/cart/cart.styles.scss
@@ -98,12 +98,18 @@ $hoverColor: #7200e4;
       width: 100%;
       justify-content: flex-start;
 
-      .cart-image {
-        width: 30%;
-        min-width: 70px;
-        min-height: 70px;
-        background-size: cover;
-        background-position: center;
+      .cart-image-container {
+        max-width: 70px;
+        max-height: 70px;
+
+        .cart-image {
+          width: 100%;
+          height: 100%;
+          min-width: 70px;
+          min-height: 70px;
+          object-fit: contain;
+          -o-object-fit: contain;
+        }
       }
 
       .cart-description {
